--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.6.1",
     "@docusaurus/core": "2.4.0",
     "@docusaurus/preset-classic": "2.4.0",
     "@mdx-js/react": "^1.6.22",
+    "add": "^2.0.6",
+    "aws-amplify": "^5.2.1",
+    "aws-crt": "^1.15.16",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-dotenv": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
